Testing predictive model

--- a/main.ipynb
+++ b/main.ipynb
@@ -3206,7 +3206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -3216,40 +3216,40 @@
       "Prediction Results:\n",
       "{\n",
       "  \"random_forest\": {\n",
-      "    \"predicted_fare\": \"$260.38\",\n",
+      "    \"predicted_fare\": \"$183.37\",\n",
       "    \"distance\": \"1021.3 miles\",\n",
       "    \"origin\": \"Denver, CO\",\n",
       "    \"destination\": \"Seattle, WA\",\n",
-      "    \"carrier\": \"AA\",\n",
+      "    \"carrier\": \"AS\",\n",
       "    \"quarter\": \"Q1\",\n",
       "    \"passengers\": 1,\n",
       "    \"route_exists\": true,\n",
-      "    \"carrier_serves_route\": false,\n",
-      "    \"market_share\": \"50.0%\"\n",
+      "    \"carrier_serves_route\": true,\n",
+      "    \"market_share\": \"25.0%\"\n",
       "  },\n",
       "  \"neural_network\": {\n",
-      "    \"predicted_fare\": \"$207.95\",\n",
+      "    \"predicted_fare\": \"$129.83\",\n",
       "    \"distance\": \"1021.3 miles\",\n",
       "    \"origin\": \"Denver, CO\",\n",
       "    \"destination\": \"Seattle, WA\",\n",
-      "    \"carrier\": \"AA\",\n",
+      "    \"carrier\": \"AS\",\n",
       "    \"quarter\": \"Q1\",\n",
       "    \"passengers\": 1,\n",
       "    \"route_exists\": true,\n",
-      "    \"carrier_serves_route\": false,\n",
-      "    \"market_share\": \"50.0%\"\n",
+      "    \"carrier_serves_route\": true,\n",
+      "    \"market_share\": \"25.0%\"\n",
       "  },\n",
       "  \"ensemble\": {\n",
-      "    \"predicted_fare\": \"$228.69\",\n",
+      "    \"predicted_fare\": \"$151.01\",\n",
       "    \"distance\": \"1021.3 miles\",\n",
       "    \"origin\": \"Denver, CO\",\n",
       "    \"destination\": \"Seattle, WA\",\n",
-      "    \"carrier\": \"AA\",\n",
+      "    \"carrier\": \"AS\",\n",
       "    \"quarter\": \"Q1\",\n",
       "    \"passengers\": 1,\n",
       "    \"route_exists\": true,\n",
-      "    \"carrier_serves_route\": false,\n",
-      "    \"market_share\": \"50.0%\",\n",
+      "    \"carrier_serves_route\": true,\n",
+      "    \"market_share\": \"25.0%\",\n",
       "    \"model_weights\": {\n",
       "      \"random_forest\": \"0.396\",\n",
       "      \"neural_network\": \"0.604\"\n",
@@ -3273,7 +3273,7 @@
     "    year=2024,\n",
     "    quarter=1,\n",
     "    passengers=1,\n",
-    "    carrier=\"AA\",\n",
+    "    carrier=\"AS\",\n",
     "    rf_model=rf_model,\n",
     "    nn_model=nn_model,\n",
     "    feature_scaler=feature_scaler,\n",
@@ -3292,25 +3292,102 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Testing Final Predictive Model"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def percentage_error(actual, measured):\n",
+    "    \"\"\"\n",
+    "    Calculate the percentage error between actual and measured values.\n",
+    "    \n",
+    "    Args:\n",
+    "        actual (float): The true or accepted value\n",
+    "        measured (float): The measured or experimental value\n",
+    "    \n",
+    "    Returns:\n",
+    "        float: The percentage error\n",
+    "    \"\"\"\n",
+    "    if actual == 0:\n",
+    "        raise ValueError(\"Actual value cannot be zero as it would cause division by zero\")\n",
+    "        \n",
+    "    error = abs(actual - measured) / abs(actual) * 100\n",
+    "    return error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Denver to Seattle on Alaska Airlines prediction "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observed Price: $202"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculated Price: \n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "den_to_seattle = predict_airfare(\n",
+    "    origin_city=\"Denver, CO\",\n",
+    "    dest_city=\"Seattle, WA\",\n",
+    "    year=2024,\n",
+    "    quarter=1,\n",
+    "    passengers=1,\n",
+    "    carrier=\"AS\",\n",
+    "    rf_model=rf_model,\n",
+    "    nn_model=nn_model,\n",
+    "    feature_scaler=feature_scaler,\n",
+    "    origin_encoder=origin_encoder,\n",
+    "    dest_encoder=dest_encoder,\n",
+    "    carrier_list=carrier_list,\n",
+    "    faresByCity_df=faresByCity_df,\n",
+    "    carriers_df=carriers_df,\n",
+    "    feature_order=feature_order,\n",
+    "    rf_mape=rf_mape,\n",
+    "    nn_mape=nn_mape,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted fare for Denver to Seattle was $151.01 actual fare was $202\n",
+      "Percent Difference:  25.242574257425748\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Predicted fare for Denver to Seattle was {den_to_seattle['ensemble']['predicted_fare']} actual fare was $202\")\n",
+    "print(\"Percent Difference: \", percentage_error(202, 151.01))"
+   ]
   },
   {
    "cell_type": "code",
