added real world tests

--- a/main.ipynb
+++ b/main.ipynb
@@ -3390,6 +3390,137 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Los Angeles to Augusta on Delta Airlines prediction "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observed Price: $383"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculated Price:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using Santa Barbara, CA as substitute for Los Angeles, CA\n",
+      "Using Portland, ME as substitute for Augusta, ME\n"
+     ]
+    }
+   ],
+   "source": [
+    "lax_to_augusta = predict_airfare(\n",
+    "    origin_city=\"Los Angeles, CA\",\n",
+    "    dest_city=\"Augusta, ME\",\n",
+    "    year=2024,\n",
+    "    quarter=1,\n",
+    "    passengers=100,\n",
+    "    carrier=\"DL\",\n",
+    "    rf_model=rf_model,\n",
+    "    nn_model=nn_model,\n",
+    "    feature_scaler=feature_scaler,\n",
+    "    origin_encoder=origin_encoder,\n",
+    "    dest_encoder=dest_encoder,\n",
+    "    carrier_list=carrier_list,\n",
+    "    faresByCity_df=faresByCity_df,\n",
+    "    carriers_df=carriers_df,\n",
+    "    feature_order=feature_order,\n",
+    "    rf_mape=rf_mape,\n",
+    "    nn_mape=nn_mape,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted fare for LAX to Augusta was $208.34 actual fare was $383\n",
+      "Percent Difference:  84.13461538461539\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Predicted fare for LAX to Augusta was {lax_to_augusta['ensemble']['predicted_fare']} actual fare was $383\")\n",
+    "print(\"Percent Difference: \", percentage_error(208, 383))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using Bangor, ME as substitute for Rome, Italy\n",
+      "Using Salinas/Monterey, CA as substitute for Sydney Australia \n"
+     ]
+    }
+   ],
+   "source": [
+    "rome_to_sydney = predict_airfare(\n",
+    "    origin_city=\"Rome, Italy\",\n",
+    "    dest_city=\"Sydney Australia \",\n",
+    "    year=2024,\n",
+    "    quarter=1,\n",
+    "    passengers=100,\n",
+    "    carrier=\"DL\",\n",
+    "    rf_model=rf_model,\n",
+    "    nn_model=nn_model,\n",
+    "    feature_scaler=feature_scaler,\n",
+    "    origin_encoder=origin_encoder,\n",
+    "    dest_encoder=dest_encoder,\n",
+    "    carrier_list=carrier_list,\n",
+    "    faresByCity_df=faresByCity_df,\n",
+    "    carriers_df=carriers_df,\n",
+    "    feature_order=feature_order,\n",
+    "    rf_mape=rf_mape,\n",
+    "    nn_mape=nn_mape,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted fare for Rome to Sydney was $314.43 actual fare was $383\n",
+      "Percent Difference:  84.13461538461539\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Predicted fare for Rome to Sydney was {rome_to_sydney['ensemble']['predicted_fare']} actual fare was $383\")\n",
+    "print(\"Percent Difference: \", percentage_error(208, 383))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
